cropper fix

--- a/static/templates/Panel/css/ng-img-crop.css
+++ b/static/templates/Panel/css/ng-img-crop.css
@@ -16,3 +16,7 @@ img-crop canvas {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   /* mobile webkit */
 }
+
+canvas {
+  width: auto;
+}
